# firmitas

./: README.md  doformat.sh  pyproject.toml
firmitas/: __init__.py  main.py
firmitas/base/: chek_ssl.py  maintool.py
firmitas/conf/: logrdata.py  standard.py
