[tool.poetry]
name = "firmitas"
version = "0.1.0"
description = "Simple notification service for X.509-standard TLS certificate statuses"
authors = ["Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
license = "GPL-3.0-or-later"
maintainers = ["Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
readme = "README.md"
homepage = "https://gitlab.com/t0xic0der/firmitas/"
repository = "https://gitlab.com/t0xic0der/firmitas/"
documentation = "https://gitlab.com/t0xic0der/firmitas/-/blob/main/README.md"
keywords = []
classifiers= [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Operating System",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
pyOpenSSL = "^23.1.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^23.0.0"
isort = "^5.10.1"
pytest = "^7.1.3"
flake8 = "<6.0.1"
pytest-black = "^0.3.12"
pytest-flake8 = "^1.0.7"
pytest-isort = "^3.0.0"
tox = "^4.0.0"
bandit = "^1.7.4"

[tool.pytest.ini_options]
addopts = "--black --isort --flake8"
flake8-max-line-length = 100
asyncio_mode = "auto"

[tool.isort]
line_length = 100
profile = "black"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
firmitas = "firmitas.main:main"
